# embedded_state_machine_lib

./: .gitignore  CMakeLists.txt  README.md  designfile.txt  statemachine.cpp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/include/: blinking_events.h
examples/basic/include/states/: led_off.hpp  led_on.hpp
examples/basic/src/: main.cpp
examples/multi/: CMakeLists.txt
examples/multi/src/: main.cpp
include/: c_events.h  event_store.h  locator.h  state_machine.h  state_machine_state.h  transition_macros.h
